testsuite/tests/rename/should_compile/T25892_aux.hs
module T25892_aux ( D(..) ) where

data D = K
