testsuite/tests/rename/should_fail/T9006a.hs
module T9006a( T )where

data T = T
